Add the second text field and try styling FirstName/LastName

--- a/Amusement Park Pass Generator/Base.lproj/Main.storyboard
+++ b/Amusement Park Pass Generator/Base.lproj/Main.storyboard
@@ -121,10 +121,10 @@
                                 <rect key="frame" x="0.0" y="194.5" width="768" height="829.5"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2vd-Gx-UT4" userLabel="First Form Sub View">
-                                        <rect key="frame" x="0.0" y="0.0" width="768" height="141"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="768" height="132.5"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gY5-Cp-7PL" userLabel="Birth SSN Project Stack View">
-                                                <rect key="frame" x="0.0" y="0.0" width="768" height="141"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="768" height="132.5"/>
                                             </stackView>
                                         </subviews>
                                         <constraints>
@@ -134,12 +134,44 @@
                                             <constraint firstItem="gY5-Cp-7PL" firstAttribute="top" secondItem="2vd-Gx-UT4" secondAttribute="top" id="wDb-sJ-VBe"/>
                                         </constraints>
                                     </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="roG-NV-Q7m" userLabel="Second Form Sub View">
+                                        <rect key="frame" x="0.0" y="132.5" width="768" height="132.5"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="CeE-re-ou4" userLabel="Birth SSN Project Stack View">
+                                                <rect key="frame" x="0.0" y="0.0" width="768" height="132.5"/>
+                                                <subviews>
+                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6Ik-ZQ-rZe" userLabel="First Name Text Field">
+                                                        <rect key="frame" x="0.0" y="51.5" width="371.5" height="30"/>
+                                                        <nil key="textColor"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <textInputTraits key="textInputTraits"/>
+                                                    </textField>
+                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lGk-GB-iru" userLabel="Last Name Text Field">
+                                                        <rect key="frame" x="396.5" y="51.5" width="371.5" height="30"/>
+                                                        <nil key="textColor"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <textInputTraits key="textInputTraits"/>
+                                                    </textField>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="CeE-re-ou4" firstAttribute="leading" secondItem="roG-NV-Q7m" secondAttribute="leading" id="2Pa-5k-jJ1"/>
+                                            <constraint firstAttribute="trailing" secondItem="CeE-re-ou4" secondAttribute="trailing" id="FeG-6P-6IO"/>
+                                            <constraint firstItem="CeE-re-ou4" firstAttribute="top" secondItem="roG-NV-Q7m" secondAttribute="top" id="R7U-ei-kyt"/>
+                                            <constraint firstAttribute="bottom" secondItem="CeE-re-ou4" secondAttribute="bottom" id="jTI-3u-vu0"/>
+                                        </constraints>
+                                    </view>
                                 </subviews>
                                 <color key="backgroundColor" red="0.92941176470588238" green="0.93725490196078431" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="2vd-Gx-UT4" firstAttribute="leading" secondItem="tiZ-wa-ocu" secondAttribute="leading" id="30e-i2-oyp"/>
+                                    <constraint firstItem="roG-NV-Q7m" firstAttribute="height" secondItem="tiZ-wa-ocu" secondAttribute="height" multiplier="0.16" id="YJZ-DJ-wBD"/>
                                     <constraint firstItem="2vd-Gx-UT4" firstAttribute="top" secondItem="tiZ-wa-ocu" secondAttribute="top" id="btM-M6-wfF"/>
-                                    <constraint firstItem="2vd-Gx-UT4" firstAttribute="height" secondItem="tiZ-wa-ocu" secondAttribute="height" multiplier="0.17" id="kqQ-YT-3Ye"/>
+                                    <constraint firstItem="roG-NV-Q7m" firstAttribute="top" secondItem="2vd-Gx-UT4" secondAttribute="bottom" id="cd4-DN-gRu"/>
+                                    <constraint firstAttribute="trailing" secondItem="roG-NV-Q7m" secondAttribute="trailing" id="fBp-3B-Cbc"/>
+                                    <constraint firstItem="2vd-Gx-UT4" firstAttribute="height" secondItem="tiZ-wa-ocu" secondAttribute="height" multiplier="0.16" id="kqQ-YT-3Ye"/>
+                                    <constraint firstItem="roG-NV-Q7m" firstAttribute="leading" secondItem="tiZ-wa-ocu" secondAttribute="leading" id="o4J-zb-5Mn"/>
                                     <constraint firstAttribute="trailing" secondItem="2vd-Gx-UT4" secondAttribute="trailing" id="tIk-YM-wti"/>
                                 </constraints>
                             </view>
