Update layout according to wireframes.

--- a/Amusement Park Pass Generator/Base.lproj/Main.storyboard
+++ b/Amusement Park Pass Generator/Base.lproj/Main.storyboard
@@ -127,6 +127,7 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="768" height="132.5"/>
                                             </stackView>
                                         </subviews>
+                                        <color key="backgroundColor" red="0.35294117650000001" green="0.73333333329999995" blue="0.16862745100000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="bottom" secondItem="gY5-Cp-7PL" secondAttribute="bottom" id="EyN-ZX-8CU"/>
                                             <constraint firstItem="gY5-Cp-7PL" firstAttribute="leading" secondItem="2vd-Gx-UT4" secondAttribute="leading" id="GRr-iN-bVC"/>
@@ -134,45 +135,33 @@
                                             <constraint firstItem="gY5-Cp-7PL" firstAttribute="top" secondItem="2vd-Gx-UT4" secondAttribute="top" id="wDb-sJ-VBe"/>
                                         </constraints>
                                     </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="roG-NV-Q7m" userLabel="Second Form Sub View">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5HE-ii-ROK" userLabel="Second Form Sub View">
                                         <rect key="frame" x="0.0" y="132.5" width="768" height="132.5"/>
                                         <subviews>
-                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="CeE-re-ou4" userLabel="Birth SSN Project Stack View">
+                                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ro8-qj-d5f" userLabel="Birth SSN Project Stack View">
                                                 <rect key="frame" x="0.0" y="0.0" width="768" height="132.5"/>
-                                                <subviews>
-                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6Ik-ZQ-rZe" userLabel="First Name Text Field">
-                                                        <rect key="frame" x="0.0" y="51.5" width="371.5" height="30"/>
-                                                        <nil key="textColor"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                        <textInputTraits key="textInputTraits"/>
-                                                    </textField>
-                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lGk-GB-iru" userLabel="Last Name Text Field">
-                                                        <rect key="frame" x="396.5" y="51.5" width="371.5" height="30"/>
-                                                        <nil key="textColor"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                        <textInputTraits key="textInputTraits"/>
-                                                    </textField>
-                                                </subviews>
                                             </stackView>
                                         </subviews>
+                                        <color key="backgroundColor" red="0.74117647060000003" green="0.18039215689999999" blue="0.16862745100000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
-                                            <constraint firstItem="CeE-re-ou4" firstAttribute="leading" secondItem="roG-NV-Q7m" secondAttribute="leading" id="2Pa-5k-jJ1"/>
-                                            <constraint firstAttribute="trailing" secondItem="CeE-re-ou4" secondAttribute="trailing" id="FeG-6P-6IO"/>
-                                            <constraint firstItem="CeE-re-ou4" firstAttribute="top" secondItem="roG-NV-Q7m" secondAttribute="top" id="R7U-ei-kyt"/>
-                                            <constraint firstAttribute="bottom" secondItem="CeE-re-ou4" secondAttribute="bottom" id="jTI-3u-vu0"/>
+                                            <constraint firstItem="Ro8-qj-d5f" firstAttribute="leading" secondItem="5HE-ii-ROK" secondAttribute="leading" id="3NO-o3-8At"/>
+                                            <constraint firstItem="Ro8-qj-d5f" firstAttribute="top" secondItem="5HE-ii-ROK" secondAttribute="top" id="7ZT-Ro-Mhr"/>
+                                            <constraint firstAttribute="trailing" secondItem="Ro8-qj-d5f" secondAttribute="trailing" id="KRv-Nz-tKQ"/>
+                                            <constraint firstAttribute="bottom" secondItem="Ro8-qj-d5f" secondAttribute="bottom" id="WxX-mw-fkK"/>
                                         </constraints>
                                     </view>
                                 </subviews>
                                 <color key="backgroundColor" red="0.92941176470588238" green="0.93725490196078431" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="2vd-Gx-UT4" firstAttribute="leading" secondItem="tiZ-wa-ocu" secondAttribute="leading" id="30e-i2-oyp"/>
-                                    <constraint firstItem="roG-NV-Q7m" firstAttribute="height" secondItem="tiZ-wa-ocu" secondAttribute="height" multiplier="0.16" id="YJZ-DJ-wBD"/>
+                                    <constraint firstItem="5HE-ii-ROK" firstAttribute="leading" secondItem="tiZ-wa-ocu" secondAttribute="leading" id="3re-9T-0tm"/>
+                                    <constraint firstItem="5HE-ii-ROK" firstAttribute="height" secondItem="tiZ-wa-ocu" secondAttribute="height" multiplier="0.16" id="6Ed-Fd-zCX"/>
                                     <constraint firstItem="2vd-Gx-UT4" firstAttribute="top" secondItem="tiZ-wa-ocu" secondAttribute="top" id="btM-M6-wfF"/>
-                                    <constraint firstItem="roG-NV-Q7m" firstAttribute="top" secondItem="2vd-Gx-UT4" secondAttribute="bottom" id="cd4-DN-gRu"/>
-                                    <constraint firstAttribute="trailing" secondItem="roG-NV-Q7m" secondAttribute="trailing" id="fBp-3B-Cbc"/>
+                                    <constraint firstItem="5HE-ii-ROK" firstAttribute="top" secondItem="2vd-Gx-UT4" secondAttribute="bottom" id="cRH-4m-kPr"/>
                                     <constraint firstItem="2vd-Gx-UT4" firstAttribute="height" secondItem="tiZ-wa-ocu" secondAttribute="height" multiplier="0.16" id="kqQ-YT-3Ye"/>
-                                    <constraint firstItem="roG-NV-Q7m" firstAttribute="leading" secondItem="tiZ-wa-ocu" secondAttribute="leading" id="o4J-zb-5Mn"/>
+                                    <constraint firstAttribute="trailing" secondItem="5HE-ii-ROK" secondAttribute="trailing" id="nWT-yo-fHK"/>
                                     <constraint firstAttribute="trailing" secondItem="2vd-Gx-UT4" secondAttribute="trailing" id="tIk-YM-wti"/>
+                                    <constraint firstItem="5HE-ii-ROK" firstAttribute="width" secondItem="tiZ-wa-ocu" secondAttribute="width" id="vxn-7P-G0z"/>
                                 </constraints>
                             </view>
                         </subviews>
